<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/high_score_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:background="@color/setting">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/game_pause"
        android:textColor="#FFF"
        android:fontFamily="@font/virgo"
        android:layout_margin="20dp"
        android:layout_gravity="start"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:fontFamily="@font/virgo"
        android:text="@string/do_you_wanna_exit">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume"
            android:textSize="20dp"
            android:background="@drawable/btn_color_shape"
            android:layout_margin="5dp"
            android:fontFamily="@font/virgo"
            android:layout_marginEnd="5dp"
            android:id="@+id/bottom_res">

        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="20dp"
            android:background="@drawable/btn_color_shape"
            android:layout_margin="5dp"
            android:fontFamily="@font/virgo"
            android:layout_marginEnd="5dp"
            android:id="@+id/bottom_exit">

        </Button>
    </LinearLayout>

</LinearLayout>