<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/paw_iv"
        android:src="@drawable/paw"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/play_btn"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="200dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/play"
        android:fontFamily="@font/virgo"
        android:textColor="@color/btn_color2"
        android:background="@drawable/btn_play"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_btn"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="200dp"
        android:layout_below="@id/play_btn"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/settings"
        android:fontFamily="@font/virgo"
        android:textColor="#000"
        android:background="@drawable/btn_home_screen"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="200dp"
        android:id="@+id/high_score_btn"
        android:layout_marginTop="10dp"
        android:layout_below="@id/settings_btn"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/high_score"
        android:fontFamily="@font/virgo"
        android:textColor="#FFF"
        android:background="@drawable/btn_highscore"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/man_and_dog"
        android:id="@+id/space_man_dog"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_marginHorizontal="40dp"
        android:src="@drawable/space_dog_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>


</RelativeLayout>